--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ integration.product-service.url=https://product-service-jzzf.onrender.com/api/v1
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.apache.hc.client5.http=DEBUG
 spring.main.allow-bean-definition-overriding=true
+
+# Enable full security debugging
+logging.level.org.springframework.security=DEBUG
+# Optional: Enable web logging to see the request details
+logging.level.org.springframework.web=DEBUG
