--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://gateway01.ap-southeast-1.prod.aws.tidbcloud.c
 spring.datasource.username=2RoYGG9Kv1SG61S.root
 spring.datasource.password=RkvgtzG3RUbydGGB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.error.include-message=always
 
 # JPA SETTINGS
 spring.jpa.hibernate.ddl-auto=update
@@ -18,7 +19,7 @@ application.security.jwt.secret-key=${JWT_SECRET:404E635266556A586E3272357538782
 application.security.jwt.expiration=86400000
 # Points to your product/inventory catalog
 integration.product-service.url=https://product-service-jzzf.onrender.com/api/v1/products/
-
+#integration.product-service.url=http://localhost:8095/api/v1/products
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.apache.hc.client5.http=DEBUG
 spring.main.allow-bean-definition-overriding=true
