Sync btw the order and merchant

--- a/build.gradle
+++ b/build.gradle
@@ -19,39 +19,35 @@ repositories {
 }
 
 dependencies {
+	// --- Main Implementation ---
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-	// Data JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	// Database Driver (Ensure you have a DB running, or use H2 for testing)
+	// Database and JWT
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
-	// JWT Library (Required for your JwtService)
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	// Lombok
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-
-	// Configuration Processor
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-
-	// Testing
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// Lombok (Consolidated for Main and Test)
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+
+	// Configuration
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+	// --- Testing ---
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
+
+	// ADD THIS: Fixes "Failed to replace DataSource" error in OrderRepositoryTest
+	testImplementation 'com.h2database:h2'
+
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
